--- a/index.html
+++ b/index.html
@@ -1,73 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>URL Shortener</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>URL Shortener </title>
+    <link rel="stylesheet" href="./style.css">
+    <script type="text/javascript" src="./index.js" defer> </script>
+    <script src="https://kit.fontawesome.com/56cec3d5b3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
-	<!-- Navigation bar -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  <a class="navbar-brand" href="#">URL Shortener</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNav">
-	    <ul class="navbar-nav">
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">Home</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">About</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">Contact</a>
-	      </li>
-	    </ul>
-	  </div>
-	</nav>
-
-	<!-- Main content area -->
-	<div class="container mt-5">
-		<div class="row">
-			<div class="col-md-8 offset-md-2">
-				<h1 class="text-center mb-4">URL Shortener</h1>
-				<form method="post" action="shorten.php">
-					<div class="form-group">
-						<label for="url">Enter URL to shorten:</label>
-						<input type="text" class="form-control" id="url" name="url" required>
-					</div>
-					<div class="text-center">
-						<button type="submit" class="btn btn-primary">Shorten URL</button>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-
-	<!-- Footer -->
-	<footer class="bg-light mt-5">
-		<div class="container py-3">
-			<div class="row">
-				<div class="col-md-6">
-					<p class="text-center text-md-left">Copyright © 
-						<script type="text/javascript">
-							document.write(new Date().getFullYear());
-						</script> 
-						<a href="#">BalajiBathini</a>
-					</p>
-				</div>
-				<div class="col-md-6">
-					<p class="text-center text-md-right">Made with <span style="color: #e25555;">
-						&#9829;</span> by <a href="#">Balaji Bathini</a></p>
-				</div>
-			</div>
-		</div>
-	</footer>
-
+    <div class="container">
+        <div class="page_title">
+            <h1>URL Shortner</h1>
+            <p>Make your links work harder</p>
+        </div>
+        <div class="short_form">
+            <form id="shorten-form">
+                <input type="text" name="url" id="url" placeholder="www.google.com">
+                <button class="btn">Shorten</button>
+            </form>
+        </div>
+        <div class="content">
+            <h2>URLs</h2>
+        </div>
+    </div>
+    <footer class="bg-light mt-auto">
+        <div class="container py-3">
+          <div class="row">
+            <div class="col-md-6">
+              <p class="text-center text-md-left m-0">Copyright ©
+                <script type="text/javascript">
+                  document.write(new Date().getFullYear());
+                </script>
+                <a href="#">BalajiBathini</a>
+              </p>
+            </div>
+            <div class="col-md-6">
+              <p class="text-center text-md-right m-0">Made with <span style="color: #e25555;">
+                  ♥</span> by <a href="#">BalajiBathini</a></p>
+            </div>
+          </div>
+        </div>
+      </footer>
+      
 </body>
 </html>
